# blis-src

./: .gitmodules  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
blis-src/: Cargo.toml  README.md  build.rs
blis-src/src/: lib.rs
blis-src/tests/: blas_gemm.rs  cblas_gemm.rs
tests/: gemm.rs
