[package]
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>",
    "Jed Brown <jed@jedbrown.org>",
]
name = "blis-src"
edition = "2018"
version = "0.2.1-alpha.0"
license = "MIT/Apache-2.0"
description = "Rust native linking for BLIS library"
repository = "https://github.com/blas-lapack-rs/blis-src"
keywords = [ "blas", "blis" ]
categories = [ "science" ]
documentation = "http://docs.rs/blis-src"
readme = "../README.md"
links = "blis"
exclude = [
    "upstream/docs/",
    "upstream/examples/",
    "upstream/mpi_test/",
    "upstream/**/test/",
]

[features]
default = ["pthreads", "cblas"]

pthreads = []
openmp = []
serial = []
cblas = []
static = []
system = []

[dev-dependencies]
libc = "0.2.40"
blas-sys = "0.7"
cblas-sys = "0.1"
