[package]
authors = [
    "Mathieu Poumeyrol <kali@zoy.org>",
    "Jed Brown <jed@jedbrown.org>",
]
name = "blis-src"
edition = "2021"
version = "0.2.1"
license = "MIT OR Apache-2.0"
description = "Rust native linking for BLIS library"
repository = "https://github.com/blas-lapack-rs/blis-src"
keywords = [ "blas", "blis" ]
categories = [ "science" ]
links = "blis"
exclude = [
    "upstream/docs/",
    "upstream/examples/",
    "upstream/mpi_test/",
    "upstream/**/test/",
]

[features]
default = ["pthreads", "cblas"]

pthreads = []
openmp = []
serial = []
cblas = []
static = []
system = []

[dev-dependencies]
libc = "0.2.154"
blas-sys = "0.7"
cblas-sys = "0.1.3"

[package.metadata.release]
tag-name = "{{crate_name}}-{{version}}"
